# task-manager

./: .env  README.md  docker-compose.yml
server/: Cargo.toml
server/src/: lib.rs  main.rs  router.rs
server/src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
server/src/middleware/: require_authentication.rs
server/src/routes/tasks/: create_task.rs  create_task_extractor.rs  mod.rs
server/src/routes/users/: create_user.rs  login.rs  logout.rs  mod.rs
server/src/utilities/: app_error.rs  hash.rs  jwt.rs
