[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros", "headers"] }
bcrypt = "0.15.0"
chrono = "0.4.31"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "9.2.0"
sea-orm = { version = "0.12.10", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.16.1", features = ["derive"] }
